lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> if_statement
Rule 5     statement -> while_loop
Rule 6     statement -> for_loop
Rule 7     statement -> break_statement
Rule 8     statement -> continue_statement
Rule 9     statement -> return_statement
Rule 10    statement -> print_statement
Rule 11    statement -> assignment
Rule 12    statement -> LBRACE statements RBRACE
Rule 13    assignment -> lvalue ASSIGN expression SEMICOLON
Rule 14    assignment -> lvalue ADDASSIGN expression SEMICOLON
Rule 15    assignment -> lvalue SUBASSIGN expression SEMICOLON
Rule 16    assignment -> lvalue MULASSIGN expression SEMICOLON
Rule 17    assignment -> lvalue DIVASSIGN expression SEMICOLON
Rule 18    matrix_element -> ID LBRACKET expression COMMA expression RBRACKET
Rule 19    lvalue -> matrix_element
Rule 20    lvalue -> ID
Rule 21    expression -> expression PLUS expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression TIMES expression
Rule 24    expression -> expression DIVIDE expression
Rule 25    expression -> expression DOTADD expression
Rule 26    expression -> expression DOTSUB expression
Rule 27    expression -> expression DOTMUL expression
Rule 28    expression -> expression DOTDIV expression
Rule 29    expression -> LPAREN expression RPAREN
Rule 30    expression -> FLOATNUM
Rule 31    expression -> INTNUM
Rule 32    expression -> STRING
Rule 33    expression -> ID
Rule 34    expression -> matrix_element
Rule 35    expression -> MINUS expression
Rule 36    expression -> expression TRANSPOSE
Rule 37    condition -> expression LT expression
Rule 38    condition -> expression GT expression
Rule 39    condition -> expression LE expression
Rule 40    condition -> expression GE expression
Rule 41    condition -> expression NE expression
Rule 42    condition -> expression EQ expression
Rule 43    expression -> matrix
Rule 44    expression -> matrix_function
Rule 45    matrix_function -> EYE LPAREN expression RPAREN
Rule 46    matrix_function -> ZEROS LPAREN expression RPAREN
Rule 47    matrix_function -> ONES LPAREN expression RPAREN
Rule 48    if_statement -> IF LPAREN condition RPAREN statement
Rule 49    if_statement -> IF LPAREN condition RPAREN statement ELSE statement
Rule 50    while_loop -> WHILE LPAREN condition RPAREN statement
Rule 51    for_loop -> FOR ID ASSIGN range statement
Rule 52    range -> expression COLON expression
Rule 53    break_statement -> BREAK SEMICOLON
Rule 54    continue_statement -> CONTINUE SEMICOLON
Rule 55    return_statement -> RETURN SEMICOLON
Rule 56    return_statement -> RETURN expression SEMICOLON
Rule 57    print_statement -> PRINT matrix_values SEMICOLON
Rule 58    matrix -> LBRACKET matrix_rows RBRACKET
Rule 59    matrix_rows -> LBRACKET matrix_values RBRACKET
Rule 60    matrix_rows -> matrix_rows COMMA LBRACKET matrix_values RBRACKET
Rule 61    matrix_values -> expression
Rule 62    matrix_values -> matrix_values COMMA expression

Terminals, with rules where they appear

ADDASSIGN            : 14
ASSIGN               : 13 51
BREAK                : 53
COLON                : 52
COMMA                : 18 60 62
CONTINUE             : 54
DIVASSIGN            : 17
DIVIDE               : 24
DOTADD               : 25
DOTDIV               : 28
DOTMUL               : 27
DOTSUB               : 26
ELSE                 : 49
EQ                   : 42
EYE                  : 45
FLOATNUM             : 30
FOR                  : 51
GE                   : 40
GT                   : 38
ID                   : 18 20 33 51
IF                   : 48 49
INTNUM               : 31
LBRACE               : 12
LBRACKET             : 18 58 59 60
LE                   : 39
LPAREN               : 29 45 46 47 48 49 50
LT                   : 37
MINUS                : 22 35
MULASSIGN            : 16
NE                   : 41
ONES                 : 47
PLUS                 : 21
PRINT                : 57
RBRACE               : 12
RBRACKET             : 18 58 59 60
RETURN               : 55 56
RPAREN               : 29 45 46 47 48 49 50
SEMICOLON            : 13 14 15 16 17 53 54 55 56 57
STRING               : 32
SUBASSIGN            : 15
TIMES                : 23
TRANSPOSE            : 36
WHILE                : 50
ZEROS                : 46
error                : 

Nonterminals, with rules where they appear

assignment           : 11
break_statement      : 7
condition            : 48 49 50
continue_statement   : 8
expression           : 13 14 15 16 17 18 18 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 35 36 37 37 38 38 39 39 40 40 41 41 42 42 45 46 47 52 52 56 61 62
for_loop             : 6
if_statement         : 4
lvalue               : 13 14 15 16 17
matrix               : 43
matrix_element       : 19 34
matrix_function      : 44
matrix_rows          : 58 60
matrix_values        : 57 59 60 62
print_statement      : 10
program              : 0
range                : 51
return_statement     : 9
statement            : 2 3 48 49 49 50 51
statements           : 1 3 12
while_loop           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . if_statement
    (5) statement -> . while_loop
    (6) statement -> . for_loop
    (7) statement -> . break_statement
    (8) statement -> . continue_statement
    (9) statement -> . return_statement
    (10) statement -> . print_statement
    (11) statement -> . assignment
    (12) statement -> . LBRACE statements RBRACE
    (48) if_statement -> . IF LPAREN condition RPAREN statement
    (49) if_statement -> . IF LPAREN condition RPAREN statement ELSE statement
    (50) while_loop -> . WHILE LPAREN condition RPAREN statement
    (51) for_loop -> . FOR ID ASSIGN range statement
    (53) break_statement -> . BREAK SEMICOLON
    (54) continue_statement -> . CONTINUE SEMICOLON
    (55) return_statement -> . RETURN SEMICOLON
    (56) return_statement -> . RETURN expression SEMICOLON
    (57) print_statement -> . PRINT matrix_values SEMICOLON
    (13) assignment -> . lvalue ASSIGN expression SEMICOLON
    (14) assignment -> . lvalue ADDASSIGN expression SEMICOLON
    (15) assignment -> . lvalue SUBASSIGN expression SEMICOLON
    (16) assignment -> . lvalue MULASSIGN expression SEMICOLON
    (17) assignment -> . lvalue DIVASSIGN expression SEMICOLON
    (19) lvalue -> . matrix_element
    (20) lvalue -> . ID
    (18) matrix_element -> . ID LBRACKET expression COMMA expression RBRACKET

    LBRACE          shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 16

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    if_statement                   shift and go to state 4
    while_loop                     shift and go to state 5
    for_loop                       shift and go to state 6
    break_statement                shift and go to state 7
    continue_statement             shift and go to state 8
    return_statement               shift and go to state 9
    print_statement                shift and go to state 10
    assignment                     shift and go to state 11
    lvalue                         shift and go to state 21
    matrix_element                 shift and go to state 22

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . if_statement
    (5) statement -> . while_loop
    (6) statement -> . for_loop
    (7) statement -> . break_statement
    (8) statement -> . continue_statement
    (9) statement -> . return_statement
    (10) statement -> . print_statement
    (11) statement -> . assignment
    (12) statement -> . LBRACE statements RBRACE
    (48) if_statement -> . IF LPAREN condition RPAREN statement
    (49) if_statement -> . IF LPAREN condition RPAREN statement ELSE statement
    (50) while_loop -> . WHILE LPAREN condition RPAREN statement
    (51) for_loop -> . FOR ID ASSIGN range statement
    (53) break_statement -> . BREAK SEMICOLON
    (54) continue_statement -> . CONTINUE SEMICOLON
    (55) return_statement -> . RETURN SEMICOLON
    (56) return_statement -> . RETURN expression SEMICOLON
    (57) print_statement -> . PRINT matrix_values SEMICOLON
    (13) assignment -> . lvalue ASSIGN expression SEMICOLON
    (14) assignment -> . lvalue ADDASSIGN expression SEMICOLON
    (15) assignment -> . lvalue SUBASSIGN expression SEMICOLON
    (16) assignment -> . lvalue MULASSIGN expression SEMICOLON
    (17) assignment -> . lvalue DIVASSIGN expression SEMICOLON
    (19) lvalue -> . matrix_element
    (20) lvalue -> . ID
    (18) matrix_element -> . ID LBRACKET expression COMMA expression RBRACKET

    $end            reduce using rule 1 (program -> statements .)
    LBRACE          shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 16

    statement                      shift and go to state 23
    if_statement                   shift and go to state 4
    while_loop                     shift and go to state 5
    for_loop                       shift and go to state 6
    break_statement                shift and go to state 7
    continue_statement             shift and go to state 8
    return_statement               shift and go to state 9
    print_statement                shift and go to state 10
    assignment                     shift and go to state 11
    lvalue                         shift and go to state 21
    matrix_element                 shift and go to state 22

state 3

    (2) statements -> statement .

    LBRACE          reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    BREAK           reduce using rule 2 (statements -> statement .)
    CONTINUE        reduce using rule 2 (statements -> statement .)
    RETURN          reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RBRACE          reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> if_statement .

    LBRACE          reduce using rule 4 (statement -> if_statement .)
    IF              reduce using rule 4 (statement -> if_statement .)
    WHILE           reduce using rule 4 (statement -> if_statement .)
    FOR             reduce using rule 4 (statement -> if_statement .)
    BREAK           reduce using rule 4 (statement -> if_statement .)
    CONTINUE        reduce using rule 4 (statement -> if_statement .)
    RETURN          reduce using rule 4 (statement -> if_statement .)
    PRINT           reduce using rule 4 (statement -> if_statement .)
    ID              reduce using rule 4 (statement -> if_statement .)
    $end            reduce using rule 4 (statement -> if_statement .)
    RBRACE          reduce using rule 4 (statement -> if_statement .)
    ELSE            reduce using rule 4 (statement -> if_statement .)


state 5

    (5) statement -> while_loop .

    LBRACE          reduce using rule 5 (statement -> while_loop .)
    IF              reduce using rule 5 (statement -> while_loop .)
    WHILE           reduce using rule 5 (statement -> while_loop .)
    FOR             reduce using rule 5 (statement -> while_loop .)
    BREAK           reduce using rule 5 (statement -> while_loop .)
    CONTINUE        reduce using rule 5 (statement -> while_loop .)
    RETURN          reduce using rule 5 (statement -> while_loop .)
    PRINT           reduce using rule 5 (statement -> while_loop .)
    ID              reduce using rule 5 (statement -> while_loop .)
    $end            reduce using rule 5 (statement -> while_loop .)
    RBRACE          reduce using rule 5 (statement -> while_loop .)
    ELSE            reduce using rule 5 (statement -> while_loop .)


state 6

    (6) statement -> for_loop .

    LBRACE          reduce using rule 6 (statement -> for_loop .)
    IF              reduce using rule 6 (statement -> for_loop .)
    WHILE           reduce using rule 6 (statement -> for_loop .)
    FOR             reduce using rule 6 (statement -> for_loop .)
    BREAK           reduce using rule 6 (statement -> for_loop .)
    CONTINUE        reduce using rule 6 (statement -> for_loop .)
    RETURN          reduce using rule 6 (statement -> for_loop .)
    PRINT           reduce using rule 6 (statement -> for_loop .)
    ID              reduce using rule 6 (statement -> for_loop .)
    $end            reduce using rule 6 (statement -> for_loop .)
    RBRACE          reduce using rule 6 (statement -> for_loop .)
    ELSE            reduce using rule 6 (statement -> for_loop .)


state 7

    (7) statement -> break_statement .

    LBRACE          reduce using rule 7 (statement -> break_statement .)
    IF              reduce using rule 7 (statement -> break_statement .)
    WHILE           reduce using rule 7 (statement -> break_statement .)
    FOR             reduce using rule 7 (statement -> break_statement .)
    BREAK           reduce using rule 7 (statement -> break_statement .)
    CONTINUE        reduce using rule 7 (statement -> break_statement .)
    RETURN          reduce using rule 7 (statement -> break_statement .)
    PRINT           reduce using rule 7 (statement -> break_statement .)
    ID              reduce using rule 7 (statement -> break_statement .)
    $end            reduce using rule 7 (statement -> break_statement .)
    RBRACE          reduce using rule 7 (statement -> break_statement .)
    ELSE            reduce using rule 7 (statement -> break_statement .)


state 8

    (8) statement -> continue_statement .

    LBRACE          reduce using rule 8 (statement -> continue_statement .)
    IF              reduce using rule 8 (statement -> continue_statement .)
    WHILE           reduce using rule 8 (statement -> continue_statement .)
    FOR             reduce using rule 8 (statement -> continue_statement .)
    BREAK           reduce using rule 8 (statement -> continue_statement .)
    CONTINUE        reduce using rule 8 (statement -> continue_statement .)
    RETURN          reduce using rule 8 (statement -> continue_statement .)
    PRINT           reduce using rule 8 (statement -> continue_statement .)
    ID              reduce using rule 8 (statement -> continue_statement .)
    $end            reduce using rule 8 (statement -> continue_statement .)
    RBRACE          reduce using rule 8 (statement -> continue_statement .)
    ELSE            reduce using rule 8 (statement -> continue_statement .)


state 9

    (9) statement -> return_statement .

    LBRACE          reduce using rule 9 (statement -> return_statement .)
    IF              reduce using rule 9 (statement -> return_statement .)
    WHILE           reduce using rule 9 (statement -> return_statement .)
    FOR             reduce using rule 9 (statement -> return_statement .)
    BREAK           reduce using rule 9 (statement -> return_statement .)
    CONTINUE        reduce using rule 9 (statement -> return_statement .)
    RETURN          reduce using rule 9 (statement -> return_statement .)
    PRINT           reduce using rule 9 (statement -> return_statement .)
    ID              reduce using rule 9 (statement -> return_statement .)
    $end            reduce using rule 9 (statement -> return_statement .)
    RBRACE          reduce using rule 9 (statement -> return_statement .)
    ELSE            reduce using rule 9 (statement -> return_statement .)


state 10

    (10) statement -> print_statement .

    LBRACE          reduce using rule 10 (statement -> print_statement .)
    IF              reduce using rule 10 (statement -> print_statement .)
    WHILE           reduce using rule 10 (statement -> print_statement .)
    FOR             reduce using rule 10 (statement -> print_statement .)
    BREAK           reduce using rule 10 (statement -> print_statement .)
    CONTINUE        reduce using rule 10 (statement -> print_statement .)
    RETURN          reduce using rule 10 (statement -> print_statement .)
    PRINT           reduce using rule 10 (statement -> print_statement .)
    ID              reduce using rule 10 (statement -> print_statement .)
    $end            reduce using rule 10 (statement -> print_statement .)
    RBRACE          reduce using rule 10 (statement -> print_statement .)
    ELSE            reduce using rule 10 (statement -> print_statement .)


state 11

    (11) statement -> assignment .

    LBRACE          reduce using rule 11 (statement -> assignment .)
    IF              reduce using rule 11 (statement -> assignment .)
    WHILE           reduce using rule 11 (statement -> assignment .)
    FOR             reduce using rule 11 (statement -> assignment .)
    BREAK           reduce using rule 11 (statement -> assignment .)
    CONTINUE        reduce using rule 11 (statement -> assignment .)
    RETURN          reduce using rule 11 (statement -> assignment .)
    PRINT           reduce using rule 11 (statement -> assignment .)
    ID              reduce using rule 11 (statement -> assignment .)
    $end            reduce using rule 11 (statement -> assignment .)
    RBRACE          reduce using rule 11 (statement -> assignment .)
    ELSE            reduce using rule 11 (statement -> assignment .)


state 12

    (12) statement -> LBRACE . statements RBRACE
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . if_statement
    (5) statement -> . while_loop
    (6) statement -> . for_loop
    (7) statement -> . break_statement
    (8) statement -> . continue_statement
    (9) statement -> . return_statement
    (10) statement -> . print_statement
    (11) statement -> . assignment
    (12) statement -> . LBRACE statements RBRACE
    (48) if_statement -> . IF LPAREN condition RPAREN statement
    (49) if_statement -> . IF LPAREN condition RPAREN statement ELSE statement
    (50) while_loop -> . WHILE LPAREN condition RPAREN statement
    (51) for_loop -> . FOR ID ASSIGN range statement
    (53) break_statement -> . BREAK SEMICOLON
    (54) continue_statement -> . CONTINUE SEMICOLON
    (55) return_statement -> . RETURN SEMICOLON
    (56) return_statement -> . RETURN expression SEMICOLON
    (57) print_statement -> . PRINT matrix_values SEMICOLON
    (13) assignment -> . lvalue ASSIGN expression SEMICOLON
    (14) assignment -> . lvalue ADDASSIGN expression SEMICOLON
    (15) assignment -> . lvalue SUBASSIGN expression SEMICOLON
    (16) assignment -> . lvalue MULASSIGN expression SEMICOLON
    (17) assignment -> . lvalue DIVASSIGN expression SEMICOLON
    (19) lvalue -> . matrix_element
    (20) lvalue -> . ID
    (18) matrix_element -> . ID LBRACKET expression COMMA expression RBRACKET

    LBRACE          shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 16

    statements                     shift and go to state 24
    statement                      shift and go to state 3
    if_statement                   shift and go to state 4
    while_loop                     shift and go to state 5
    for_loop                       shift and go to state 6
    break_statement                shift and go to state 7
    continue_statement             shift and go to state 8
    return_statement               shift and go to state 9
    print_statement                shift and go to state 10
    assignment                     shift and go to state 11
    lvalue                         shift and go to state 21
    matrix_element                 shift and go to state 22

state 13

    (48) if_statement -> IF . LPAREN condition RPAREN statement
    (49) if_statement -> IF . LPAREN condition RPAREN statement ELSE statement

    LPAREN          shift and go to state 25


state 14

    (50) while_loop -> WHILE . LPAREN condition RPAREN statement

    LPAREN          shift and go to state 26


state 15

    (51) for_loop -> FOR . ID ASSIGN range statement

    ID              shift and go to state 27


state 16

    (20) lvalue -> ID .
    (18) matrix_element -> ID . LBRACKET expression COMMA expression RBRACKET

    ASSIGN          reduce using rule 20 (lvalue -> ID .)
    ADDASSIGN       reduce using rule 20 (lvalue -> ID .)
    SUBASSIGN       reduce using rule 20 (lvalue -> ID .)
    MULASSIGN       reduce using rule 20 (lvalue -> ID .)
    DIVASSIGN       reduce using rule 20 (lvalue -> ID .)
    LBRACKET        shift and go to state 28


state 17

    (53) break_statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 29


state 18

    (54) continue_statement -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 30


state 19

    (55) return_statement -> RETURN . SEMICOLON
    (56) return_statement -> RETURN . expression SEMICOLON
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression DOTADD expression
    (26) expression -> . expression DOTSUB expression
    (27) expression -> . expression DOTMUL expression
    (28) expression -> . expression DOTDIV expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . FLOATNUM
    (31) expression -> . INTNUM
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . matrix_element
    (35) expression -> . MINUS expression
    (36) expression -> . expression TRANSPOSE
    (43) expression -> . matrix
    (44) expression -> . matrix_function
    (18) matrix_element -> . ID LBRACKET expression COMMA expression RBRACKET
    (58) matrix -> . LBRACKET matrix_rows RBRACKET
    (45) matrix_function -> . EYE LPAREN expression RPAREN
    (46) matrix_function -> . ZEROS LPAREN expression RPAREN
    (47) matrix_function -> . ONES LPAREN expression RPAREN

    SEMICOLON       shift and go to state 31
    LPAREN          shift and go to state 34
    FLOATNUM        shift and go to state 35
    INTNUM          shift and go to state 36
    STRING          shift and go to state 37
    ID              shift and go to state 38
    MINUS           shift and go to state 33
    LBRACKET        shift and go to state 42
    EYE             shift and go to state 43
    ZEROS           shift and go to state 44
    ONES            shift and go to state 45

    expression                     shift and go to state 32
    matrix_element                 shift and go to state 39
    matrix                         shift and go to state 40
    matrix_function                shift and go to state 41

state 20

    (57) print_statement -> PRINT . matrix_values SEMICOLON
    (61) matrix_values -> . expression
    (62) matrix_values -> . matrix_values COMMA expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression DOTADD expression
    (26) expression -> . expression DOTSUB expression
    (27) expression -> . expression DOTMUL expression
    (28) expression -> . expression DOTDIV expression
    (29) expression -> . LPAREN expression RPAREN
    (30) expression -> . FLOATNUM
    (31) expression -> . INTNUM
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . matrix_element
    (35) expression -> . MINUS expression
    (36) expression -> . expression TRANSPOSE
    (43) expression -> . matrix
    (44) expression -> . matrix_function
    (18) matrix_element -> . ID LBRACKET expression COMMA expression RBRACKET
    (58) matrix -> . LBRACKET matrix_rows RBRACKET
    (45) matrix_function -> . EYE LPAREN expression RPAREN
    (46) matrix_function -> . ZEROS LPAREN expression RPAREN
    (47) matrix_function -> . ONES LPAREN expression RPAREN

    LPAREN          shift and go to state 34
    FLOATNUM        shift and go to state 35
    INTNUM          shift and go to state 36
    STRING          shift and go to state 37
    ID              shift and go to state 38
    MINUS           shift and go to state 33
    LBRACKET        shift and go to state 42
    EYE             shift and go to state 43
    ZEROS           shift and go to state 44
    ONES            shift and go to state 45

    matrix_values                  shift and go to state 46
    expression                     shift and go to state 47
    matrix_element                 shift and go to state 39
    matrix                         shift and go to state 40
    matrix_function                shift and go to state 41

state 21

    (13) assignment -> lvalue . ASSIGN expression SEMICOLON
    (14) assignment -> lvalue . ADDASSIGN expression SEMICOLON
    (15) assignment -> lvalue . SUBASSIGN expression SEMICOLON
    (16) assignment -> lvalue . MULASSIGN expression SEMICOLON
    (17) assignment -> lvalue . DIVASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 48
    ADDASSIGN       shift and go to state 49
    SUBASSIGN       shift and go to state 50
    MULASSIGN       shift and go to state 51
    DIVASSIGN       shift and go to state 52


state 22

    (19) lvalue -> matrix_element .

    ASSIGN          reduce using rule 19 (lvalue -> matrix_element .)
    ADDASSIGN       reduce using rule 19 (lvalue -> matrix_element .)
    SUBASSIGN       reduce using rule 19 (lvalue -> matrix_element .)
    MULASSIGN       reduce using rule 19 (lvalue -> matrix_element .)
    DIVASSIGN       reduce using rule 19 (lvalue -> matrix_element .)


state 23

    (3) statements -> statements statement .

    LBRACE          reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    WHILE           reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    BREAK           reduce using rule 3 (statements -> statements statement .)
    CONTINUE        reduce using rule 3 (statements -> statements statement .)
    RETURN          reduce using rule 3 (statements -> statements statement .)
    PRINT           reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    RBRACE          reduce using rule 3 (statements -> statements statement .)


state 24

    (12) statement -> LBRACE statements . RBRACE
    (3) statements -> statements . statement
    (4) statement -> . if_statement
    (5) statement -> . while_loop
    (6) statement -> . for_loop
    (7) statement -> . break_statement
    (8) statement -> . continue_statement
    (9) statement -> . return_statement
    (10) statement -> . print_statement
    (11) statement -> . assignment
    (12) statement -> . LBRACE statements RBRACE
    (48) if_statement -> . IF LPAREN condition RPAREN statement
    (49) if_statement -> . IF LPAREN condition RPAREN statement ELSE statement
    (50) while_loop -> . WHILE LPAREN condition RPAREN statement
    (51) for_loop -> . FOR ID ASSIGN range statement
    (53) break_statement -> . BREAK SEMICOLON
    (54) continue_statement -> . CONTINUE SEMICOLON
    (55) return_statement -> . RETURN SEMICOLON
    (56) return_statement -> . RETURN expression SEMICOLON
    (57) print_statement -> . PRINT matrix_values SEMICOLON
    (13) assignment -> . lvalue ASSIGN expression SEMICOLON
    (14) assignment -> . lvalue ADDASSIGN expression SEMICOLON
    (15) assignment -> . lvalue SUBASSIGN expression SEMICOLON
    (16) assignment -> . lvalue MULASSIGN expression SEMICOLON
    (17) assignment -> . lvalue DIVASSIGN expression SEMICOLON
    (19) lvalue -> . matrix_element
    (20) lvalue -> . ID
    (18) matrix_element -> . ID LBRACKET expression COMMA expression RBRACKET

    RBRACE          shift and go to state 53
    LBRACE          shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 16

    statement                      shift and go to state 23
    if_statement                   shift and go to state 4
    while_loop                     shift and go to state 5
